1. SRP maintained. different repository methods created for adding and removing bookmark.