@@ -1,3 +1,5 @@
 class AppStrings {
   static String notApplicable = "N/A";
+  static String jobResultsBox = "job_results";
+  static String bookmarkBox = "bookmarks";
 }
