@@ -3,8 +3,7 @@ import 'package:flutter/material.dart';
 import 'package:flutter_bloc/flutter_bloc.dart';
 import 'package:flutter_dotenv/flutter_dotenv.dart';
 import 'package:get_it/get_it.dart';
-import 'package:get_storage/get_storage.dart';
-import 'package:job_search_app/core/services/app_bloc_observer.dart';
+import 'core/services/services.dart';
 import 'features/job_search/presentation/blocs/job_search_bloc.dart';
 
 import 'package:job_search_app/core/di/dependency_injection.dart' as di;
@@ -19,7 +18,8 @@ void main() async {
   await Firebase.initializeApp(
     options: DefaultFirebaseOptions.currentPlatform,
   );
-  await GetStorage.init();
+  final storageService = GetStorageService();
+  await storageService.init();
   Bloc.observer = AppBlocObserver();
   runApp(MyJobApp());
 }
