@@ -1,1 +1,2 @@
-1. SRP maintained. different repository methods created for adding and removing bookmark.
+1. Saved job screen now showing data from saved search results. Need to update it
+2. Singleton service class created for LocalStorage. all usage updated.
